web/app/themes/ppj/src/sass/components/triple-text-block.sass
.triple-text-block
  margin: $common-spacing

  &__title
    @extend .common-header

    @include bp('portrait')
      font-size: $font-size-quite-huge

    @include bp('large')
      font-size: $font-size-almost-huge

  &__text-blocks-container
    display: flex
    flex-direction: column

    @include bp('portrait')
      flex-direction: row

  &__text-block
    $border: .2rem solid $color-very-light
    align-items: flex-start
    border-bottom: .2rem solid $color-very-light
    display: flex
    flex-direction: row
    padding: $common-spacing
    width: 100%

    &:first-child
      border-top: $border

      @include bp('portrait')
        border: none
        padding-left: 0

    @include bp('portrait')
      align-items: center
      border-bottom: none
      flex-direction: column
      width: 33%

    &:last-child
      @include bp('portrait')
        padding-right: 0

  &__icon
    width: 6.4rem

    @include bp('portrait')
      margin-bottom: $common-spacing
      width: 10rem

    @include bp('large')
      width: 12rem

  &__text-container
    text-align: center

    @include bp('portrait')
      font-size: $font-size-medium

    @include bp('large')
      font-size: $font-size-really-very-large

  &__icon-text
    color: $color-tertiary
    font-size: $font-size-enormous
    font-weight: $font-weight-very-bold
    line-height: 1
    position: relative
    top: -.7rem

    @include bp('portrait')
      text-align: center

  &__content
    & a
      text-decoration: underline

  &--text-only
    .triple-text-block
      &__text-container
        text-align: left

